--- a/src/pages/TipsPage/TipsPage.css
+++ b/src/pages/TipsPage/TipsPage.css
@@ -1,8 +1,8 @@
 .TipsPage {
     text-align: center;
-    background-color: aqua;
+    background-color: lightblue;
   }
 
-.Tips-header {
-   background-color: aqua;
-}
+
+
+
