desgining the tiny travels advice page

--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -2,12 +2,12 @@
     height: 600px;
     background-size: cover;
     width: 100%;
-    background-image:url("../../../images/momlogin.png");
+    background-image:url("../../../images/navbar.png");
   }
 
-  .NavBar {
+  /* .NavBar {
     font-family: 'Times New Roman', Times, serif;
-  }
+  } */
 
   .LoginForm {
     background-color: aqua;
