--- a/src/pages/TipsPage/TipsPage.css
+++ b/src/pages/TipsPage/TipsPage.css
@@ -16,7 +16,7 @@
     height: 576px;
     background-size: cover;
     width: 100%;
-    background-image:url("../../../images/mom.png");
+    background-image:url("../../../images/New.png");
   }
 
 
